<?xml version="1.0" encoding="UTF-8"?>
<project xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
		 xmlns="http://maven.apache.org/POM/4.0.0"
		 xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<groupId>org.springframework.cloud.internal</groupId>
	<artifactId>releaser-parent</artifactId>
	<version>3.0.0-SNAPSHOT</version>
	<packaging>pom</packaging>

	<parent>
		<groupId>org.springframework.cloud</groupId>
		<artifactId>spring-cloud-build</artifactId>
		<version>4.0.3</version>
		<relativePath/>
		<!-- lookup parent from repository -->
	</parent>

	<modules>
		<module>releaser-core</module>
		<module>releaser-spring</module>
		<module>releaser-test</module>
		<!--<module>spring-cloud-info</module>-->
		<module>projects</module>
<!--		<module>docs</module>--> <!-- TODO: Revert -->
	</modules>

	<properties>
		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
		<java.version>17</java.version>

		<spring-cloud-bom.version>2022.0.3</spring-cloud-bom.version>
		<github-api.version>1.315</github-api.version>
		<jsch-agent.version>0.0.9</jsch-agent.version>
		<!--Matches JGit in Boot:-->
		<org.eclipse.jgit-version>6.6.1.202309021850-r</org.eclipse.jgit-version>
		<!-- Versions plugin uses this version -->
		<maven-model.version>3.8.5</maven-model.version>
		<versions-maven-plugin.version>2.10.0</versions-maven-plugin.version>
		<handlebars.version>4.3.1</handlebars.version>
		<initializr-metadata.version>0.12.0</initializr-metadata.version>
		<awaitility.version>4.2.0</awaitility.version>
		<sagan-site.version>1.0.0-SNAPSHOT</sagan-site.version>
		<javax.json.version>1.1.4</javax.json.version>
		<jopt-simple.version>5.0.4</jopt-simple.version>
		<fliptables.version>1.1.0</fliptables.version>
		<zt.exec.version>1.12</zt.exec.version>
		<okhttp.version>4.11.0</okhttp.version>
	</properties>

	<dependencyManagement>
		<dependencies>
			<dependency>
				<groupId>org.springframework.cloud</groupId>
				<artifactId>spring-cloud-dependencies</artifactId>
				<version>${spring-cloud-bom.version}</version>
				<type>pom</type>
				<scope>import</scope>
			</dependency>
			<dependency>
				<groupId>org.eclipse.jgit</groupId>
				<artifactId>org.eclipse.jgit</artifactId>
				<version>${org.eclipse.jgit-version}</version>
			</dependency>
			<dependency>
				<groupId>org.eclipse.jgit</groupId>
				<artifactId>org.eclipse.jgit.ssh.jsch</artifactId>
				<version>${org.eclipse.jgit-version}</version>
			</dependency>
			<!-- a proxy to ssh-agent and Pageant in Java -->
			<dependency>
				<groupId>com.jcraft</groupId>
				<artifactId>jsch.agentproxy.sshagent</artifactId>
				<version>${jsch-agent.version}</version>
			</dependency>
			<dependency>
				<groupId>com.jcraft</groupId>
				<artifactId>jsch.agentproxy.jsch</artifactId>
				<version>${jsch-agent.version}</version>
			</dependency>
			<dependency>
				<groupId>com.jcraft</groupId>
				<artifactId>jsch.agentproxy.usocket-jna</artifactId>
				<version>${jsch-agent.version}</version>
			</dependency>
			<dependency>
				<groupId>org.apache.maven</groupId>
				<artifactId>maven-model</artifactId>
				<!--<version>3.3.9</version>-->
				<!-- Versions plugin uses this version -->
				<version>${maven-model.version}</version>
			</dependency>
			<dependency>
				<groupId>org.codehaus.mojo</groupId>
				<artifactId>versions-maven-plugin</artifactId>
				<version>${versions-maven-plugin.version}</version>
				<exclusions>
					<exclusion>
						<groupId>org.slf4j</groupId>
						<artifactId>slf4j-jdk14</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.slf4j</groupId>
						<artifactId>jcl-over-slf4j</artifactId>
					</exclusion>
					<exclusion>
						<groupId>org.slf4j</groupId>
						<artifactId>slf4j-nop</artifactId>
					</exclusion>
				</exclusions>
			</dependency>
			<dependency>
				<groupId>org.kohsuke</groupId>
				<artifactId>github-api</artifactId>
				<version>${github-api.version}</version>
			</dependency>
			<dependency>
				<groupId>com.squareup.okhttp3</groupId>
				<artifactId>okhttp</artifactId>
				<version>${okhttp.version}</version>
			</dependency>
			<dependency>
				<groupId>com.github.jknack</groupId>
				<artifactId>handlebars</artifactId>
				<version>${handlebars.version}</version>
			</dependency>
			<dependency>
				<groupId>io.spring.initializr</groupId>
				<artifactId>initializr-metadata</artifactId>
				<version>${initializr-metadata.version}</version>
			</dependency>
			<dependency>
				<groupId>org.glassfish</groupId>
				<artifactId>javax.json</artifactId>
				<version>${javax.json.version}</version>
			</dependency>
			<dependency>
				<groupId>org.zeroturnaround</groupId>
				<artifactId>zt-exec</artifactId>
				<version>${zt.exec.version}</version>
			</dependency>
			<dependency>
				<groupId>org.awaitility</groupId>
				<artifactId>awaitility</artifactId>
				<version>${awaitility.version}</version>
			</dependency>
		</dependencies>
	</dependencyManagement>

	<build>
		<plugins>
			<plugin>
				<groupId>io.spring.javaformat</groupId>
				<artifactId>spring-javaformat-maven-plugin</artifactId>
			</plugin>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
			</plugin>
		</plugins>
	</build>

	<reporting>
		<plugins>
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-checkstyle-plugin</artifactId>
			</plugin>
		</plugins>
	</reporting>

	<repositories>
		<repository>
			<id>spring-snapshots</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<releases>
				<enabled>false</enabled>
			</releases>
		</repository>
		<repository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</repository>
	</repositories>
	<pluginRepositories>
		<pluginRepository>
			<id>spring-snapshots</id>
			<name>Spring Snapshots</name>
			<url>https://repo.spring.io/snapshot</url>
			<snapshots>
				<enabled>true</enabled>
			</snapshots>
			<releases>
				<enabled>false</enabled>
			</releases>
		</pluginRepository>
		<pluginRepository>
			<id>spring-milestones</id>
			<name>Spring Milestones</name>
			<url>https://repo.spring.io/milestone</url>
			<snapshots>
				<enabled>false</enabled>
			</snapshots>
		</pluginRepository>
	</pluginRepositories>

</project>
